# Winshell

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: mockup.md
packaging/macos/: launcher.applescript  winshell_runtime.spec
scripts/: build_macos.sh
winshell/: CONTRIBUTING.md  README.md  TASKS.md  models.py  parser.py  registry.py
winshell/adapters/: network.py  runner.py  system.py
winshell/assets/: WinShell.icns
winshell/commands/: __init__.py  arp.py  base.py  cls.py  copy.py  deviceinfo.py  dig.py  exit.py  export.py  geoip.py  getmac.py  help.py  hostname.py  ipconfig.py  last.py  mode.py  neighbors.py  netstat.py  nslookup.py  ping.py  resolve.py  route.py  systeminfo.py  tasklist.py  telnet.py  test_netconnection.py  tracert.py  uptime.py  who.py  whoami.py
winshell/docs/: release.md
winshell/formatters/: windows_style.py
winshell/tui/: app.py
winshell/widgets/: __init__.py  command_input.py
winshell/winshell/: __main__.py  models.py  parser.py  registry.py
winshell/winshell/adapters/: network.py  runner.py  system.py
winshell/winshell/formatters/: windows_style.py
winshell/winshell/tui/: app.py
